Fix table scrollbars issue due to overflow

--- a/style/base.css
+++ b/style/base.css
@@ -126,6 +126,7 @@
   min-height: 0;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .up-BenchmarkHistory {
